With the grace of Miciah fix so that the default keybinding for mark-goto, (') is shown correctly. Looks like asciidoc gets it wrong when there are too many 's in play.

--- a/doc/man/man5/elinkskeys.5
+++ b/doc/man/man5/elinkskeys.5
@@ -728,255 +728,255 @@ The default bindings are shown below\&. Any bindings in ~/\&.elinks/elinks\&.con
 Move downwards by a page (\fImove\-page\-down\fR)
 
 .TP
-\fI\fR#\fI\fR
+\fI#\fR
 Search link text by typing ahead (\fIsearch\-typeahead\fR)
 
 .TP
-\fI\fR%\fI\fR
+\fI%\fR
 Toggle usage of document specific colors (\fItoggle\-document\-colors\fR)
 
 .TP
-\fI\fR*\fI\fR
+\fI*\fR
 Toggle displaying of links to images (\fItoggle\-display\-images\fR)
 
 .TP
-\fI\fR,\fI\fR
+\fI,\fR
 Open a Lua console (\fIlua\-console\fR)
 
 .TP
-\fI\fR\&.\fI\fR
+\fI\&.\fR
 Toggle displaying of links numbers (\fItoggle\-numbered\-links\fR)
 
 .TP
-\fI\fR/\fI\fR
+\fI/\fR
 Search for a text pattern (\fIsearch\fR)
 
 .TP
-\fI\fR:\fI\fR
+\fI:\fR
 Enter ex\-mode (command line) (\fIexmode\fR)
 
 .TP
-\fI\fR<\fI\fR
+\fI<\fR
 Previous tab (\fItab\-prev\fR)
 
 .TP
-\fIAlt\-\fR<\fI\fR
+\fIAlt\-<\fR
 Move the current tab to the left (\fItab\-move\-left\fR)
 
 .TP
-\fI\fR=\fI\fR
+\fI=\fR
 Show information about the current page (\fIdocument\-info\fR)
 
 .TP
-\fI\fR>\fI\fR
+\fI>\fR
 Next tab (\fItab\-next\fR)
 
 .TP
-\fIAlt\-\fR>\fI\fR
+\fIAlt\->\fR
 Move the current tab to the right (\fItab\-move\-right\fR)
 
 .TP
-\fI\fR?\fI\fR
+\fI?\fR
 Search backwards for a text pattern (\fIsearch\-back\fR)
 
 .TP
-\fI'A\fR'
+\fIA\fR
 Add a new bookmark using current link (\fIadd\-bookmark\-link\fR)
 
 .TP
-\fICtrl\-'A\fR'
+\fICtrl\-A\fR
 Move to the start of the document (\fImove\-document\-start\fR)
 
 .TP
-\fICtrl\-'B\fR'
+\fICtrl\-B\fR
 Move upwards by a page (\fImove\-page\-up\fR)
 
 .TP
-\fI'C\fR'
+\fIC\fR
 Open cache manager (\fIcache\-manager\fR)
 
 .TP
-\fI'D\fR'
+\fID\fR
 Open download manager (\fIdownload\-manager\fR)
 
 .TP
-\fI'E\fR'
+\fIE\fR
 Open \\"Go to URL\\" dialog box containing the current link URL (\fIgoto\-url\-current\-link\fR)
 
 .TP
-\fICtrl\-'E\fR'
+\fICtrl\-E\fR
 Move to the end of the document (\fImove\-document\-end\fR)
 
 .TP
-\fI'F\fR'
+\fIF\fR
 Open form history manager (\fIformhist\-manager\fR)
 
 .TP
-\fICtrl\-'F\fR'
+\fICtrl\-F\fR
 Move downwards by a page (\fImove\-page\-down\fR)
 
 .TP
-\fI'G\fR'
+\fIG\fR
 Open \\"Go to URL\\" dialog box containing the current URL (\fIgoto\-url\-current\fR)
 
 .TP
-\fI'H\fR'
+\fIH\fR
 Go to the homepage (\fIgoto\-url\-home\fR)
 
 .TP
-\fI'K\fR'
+\fIK\fR
 Open cookie manager (\fIcookie\-manager\fR)
 
 .TP
-\fICtrl\-'K\fR'
+\fICtrl\-K\fR
 Reload cookies file (\fIcookies\-load\fR)
 
 .TP
-\fI'L\fR'
+\fIL\fR
 Open the link context menu (\fIlink\-menu\fR)
 
 .TP
-\fICtrl\-'L\fR'
+\fICtrl\-L\fR
 Redraw the terminal (\fIredraw\fR)
 
 .TP
-\fI'N\fR'
+\fIN\fR
 Find the previous occurrence of the current search text (\fIfind\-next\-back\fR)
 
 .TP
-\fICtrl\-'N\fR'
+\fICtrl\-N\fR
 Scroll down (\fIscroll\-down\fR)
 
 .TP
-\fICtrl\-'P\fR'
+\fICtrl\-P\fR
 Scroll up (\fIscroll\-up\fR)
 
 .TP
-\fI'Q\fR'
+\fIQ\fR
 Quit without confirmation (\fIreally\-quit\fR)
 
 .TP
-\fICtrl\-'R\fR'
+\fICtrl\-R\fR
 Reload the current page (\fIreload\fR)
 
 .TP
-\fI'T\fR'
+\fIT\fR
 Open the current link in a new tab in the background (\fIopen\-link\-in\-new\-tab\-in\-background\fR)
 
 .TP
-\fI'W\fR'
+\fIW\fR
 Toggle wrapping of text (\fItoggle\-wrap\-text\fR)
 
 .TP
-\fI\fR[\fI\fR
+\fI[\fR
 Scroll left (\fIscroll\-left\fR)
 
 .TP
-\fI\fR'\fI\fR
+\fI\'\fR
 Go at a specified mark (\fImark\-goto\fR)
 
 .TP
-\fI\fR''
+\fI\\\fR
 Toggle rendering page as HTML / plain text (\fItoggle\-html\-plain\fR)
 
 .TP
-\fI\fR]\fI\fR
+\fI]\fR
 Scroll right (\fIscroll\-right\fR)
 
 .TP
-\fI'a\fR'
+\fIa\fR
 Add a new bookmark (\fIadd\-bookmark\fR)
 
 .TP
-\fI'b\fR'
+\fIb\fR
 Move upwards by a page (\fImove\-page\-up\fR)
 
 .TP
-\fI'c\fR'
+\fIc\fR
 Close tab (\fItab\-close\fR)
 
 .TP
-\fI'd\fR'
+\fId\fR
 Download the current link (\fIlink\-download\fR)
 
 .TP
-\fI'e\fR'
+\fIe\fR
 Open the tab menu (\fItab\-menu\fR)
 
 .TP
-\fI'f\fR'
+\fIf\fR
 Maximize the current frame (\fIframe\-maximize\fR)
 
 .TP
-\fI'g\fR'
+\fIg\fR
 Open \\"Go to URL\\" dialog box (\fIgoto\-url\fR)
 
 .TP
-\fI'h\fR'
+\fIh\fR
 Open history manager (\fIhistory\-manager\fR)
 
 .TP
-\fI'k\fR'
+\fIk\fR
 Open keybinding manager (\fIkeybinding\-manager\fR)
 
 .TP
-\fI'l\fR'
+\fIl\fR
 Jump to link (\fIjump\-to\-link\fR)
 
 .TP
-\fI'm\fR'
+\fIm\fR
 Set a mark (\fImark\-set\fR)
 
 .TP
-\fI'n\fR'
+\fIn\fR
 Find the next occurrence of the current search text (\fIfind\-next\fR)
 
 .TP
-\fI'o\fR'
+\fIo\fR
 Open options manager (\fIoptions\-manager\fR)
 
 .TP
-\fI'q\fR'
+\fIq\fR
 Open a quit confirmation dialog box (\fIquit\fR)
 
 .TP
-\fI'r\fR'
+\fIr\fR
 Attempt to resume download of the current link (\fIlink\-download\-resume\fR)
 
 .TP
-\fI's\fR'
+\fIs\fR
 Open bookmark manager (\fIbookmark\-manager\fR)
 
 .TP
-\fI't\fR'
+\fIt\fR
 Open a new tab (\fIopen\-new\-tab\fR)
 
 .TP
-\fI'u\fR'
+\fIu\fR
 Go forward in history (\fIhistory\-move\-forward\fR)
 
 .TP
-\fI'v\fR'
+\fIv\fR
 View the current image (\fIview\-image\fR)
 
 .TP
-\fI'x\fR'
+\fIx\fR
 Follow the current link, forcing reload of the target (\fIlink\-follow\-reload\fR)
 
 .TP
-\fI'z\fR'
+\fIz\fR
 Abort connection (\fIabort\-connection\fR)
 
 .TP
-\fI\fR{\fI\fR
+\fI{\fR
 Scroll left (\fIscroll\-left\fR)
 
 .TP
-\fI\fR|\fI\fR
+\fI|\fR
 Show information about the current page protocol headers (\fIheader\-info\fR)
 
 .TP
-\fI\fR}\fI\fR
+\fI}\fR
 Scroll right (\fIscroll\-right\fR)
 
 .TP
@@ -1058,63 +1058,63 @@ Move to the previous link (\fImove\-link\-prev\fR)
 .SS "EDIT KEYS"
 
 .TP
-\fIAlt\-\fR<\fI\fR
+\fIAlt\-<\fR
 Go to the first line of the buffer (\fIbeginning\-of\-buffer\fR)
 
 .TP
-\fIAlt\-\fR>\fI\fR
+\fIAlt\->\fR
 Go to the last line of the buffer (\fIend\-of\-buffer\fR)
 
 .TP
-\fICtrl\-'A\fR'
+\fICtrl\-A\fR
 Go to the start of the page/line (\fIhome\fR)
 
 .TP
-\fICtrl\-'D\fR'
+\fICtrl\-D\fR
 Delete character under cursor (\fIdelete\fR)
 
 .TP
-\fICtrl\-'E\fR'
+\fICtrl\-E\fR
 Go to the end of the page/line (\fIend\fR)
 
 .TP
-\fICtrl\-'H\fR'
+\fICtrl\-H\fR
 Delete character in front of the cursor (\fIbackspace\fR)
 
 .TP
-\fICtrl\-'K\fR'
+\fICtrl\-K\fR
 Delete to end of line (\fIkill\-to\-eol\fR)
 
 .TP
-\fICtrl\-'L\fR'
+\fICtrl\-L\fR
 Redraw the terminal (\fIredraw\fR)
 
 .TP
-\fIAlt\-'r\fR'
+\fIAlt\-r\fR
 Toggle regex matching (type\-ahead searching) (\fIsearch\-toggle\-regex\fR)
 
 .TP
-\fICtrl\-'R\fR'
+\fICtrl\-R\fR
 Attempt to unambiguously auto\-complete the input (\fIauto\-complete\-unambiguous\fR)
 
 .TP
-\fICtrl\-'T\fR'
+\fICtrl\-T\fR
 Open in external editor (\fIopen\-external\fR)
 
 .TP
-\fICtrl\-'U\fR'
+\fICtrl\-U\fR
 Delete to beginning of line (\fIkill\-to\-bol\fR)
 
 .TP
-\fICtrl\-'V\fR'
+\fICtrl\-V\fR
 Paste text from the clipboard (\fIpaste\-clipboard\fR)
 
 .TP
-\fICtrl\-'W\fR'
+\fICtrl\-W\fR
 Attempt to auto\-complete the input (\fIauto\-complete\fR)
 
 .TP
-\fICtrl\-'X\fR'
+\fICtrl\-X\fR
 Delete text from clipboard (\fIcut\-clipboard\fR)
 
 .TP
@@ -1180,71 +1180,71 @@ Move cursor upwards (\fIup\fR)
 Select current highlighted item (\fIselect\fR)
 
 .TP
-\fI\fR*\fI\fR
+\fI*\fR
 Mark item (\fImark\-item\fR)
 
 .TP
-\fI\fR+\fI\fR
+\fI+\fR
 Expand item (\fIexpand\fR)
 
 .TP
-\fI\fR\-\fI\fR
+\fI\-\fR
 Collapse item (\fIunexpand\fR)
 
 .TP
-\fI\fR/\fI\fR
+\fI/\fR
 Search for a text pattern (\fIsearch\fR)
 
 .TP
-\fI\fR=\fI\fR
+\fI=\fR
 Expand item (\fIexpand\fR)
 
 .TP
-\fICtrl\-'A\fR'
+\fICtrl\-A\fR
 Go to the start of the page/line (\fIhome\fR)
 
 .TP
-\fICtrl\-'B\fR'
+\fICtrl\-B\fR
 Move upwards by a page (\fIpage\-up\fR)
 
 .TP
-\fICtrl\-'E\fR'
+\fICtrl\-E\fR
 Go to the end of the page/line (\fIend\fR)
 
 .TP
-\fICtrl\-'F\fR'
+\fICtrl\-F\fR
 Move downwards by a page (\fIpage\-down\fR)
 
 .TP
-\fICtrl\-'L\fR'
+\fICtrl\-L\fR
 Redraw the terminal (\fIredraw\fR)
 
 .TP
-\fICtrl\-'N\fR'
+\fICtrl\-N\fR
 Move cursor downwards (\fIdown\fR)
 
 .TP
-\fICtrl\-'P\fR'
+\fICtrl\-P\fR
 Move cursor upwards (\fIup\fR)
 
 .TP
-\fIAlt\-'V\fR'
+\fIAlt\-V\fR
 Move upwards by a page (\fIpage\-up\fR)
 
 .TP
-\fICtrl\-'V\fR'
+\fICtrl\-V\fR
 Move downwards by a page (\fIpage\-down\fR)
 
 .TP
-\fI\fR[\fI\fR
+\fI[\fR
 Expand item (\fIexpand\fR)
 
 .TP
-\fI\fR]\fI\fR
+\fI]\fR
 Collapse item (\fIunexpand\fR)
 
 .TP
-\fI'_\fR'
+\fI_\fR
 Collapse item (\fIunexpand\fR)
 
 .TP
