--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,72 @@
+Thu May 19 09:31:23 2005  Laurent Monin <zas@norz.org>:
+
+	* src/terminal/key.inc:
+
+	Directly set KBD_UNDEF.  
+
+Thu May 19 09:30:18 2005  Laurent Monin <zas@norz.org>:
+
+	* src/terminal/kbd.c:
+
+	Use struct term_event_keyboard and related macros.  
+
+Thu May 19 09:17:31 2005  Laurent Monin <zas@norz.org>:
+
+	* src/terminal/kbd.c:
+
+	decode_terminal_escape_sequence(): use struct term_event_keyboard.  
+
+Thu May 19 08:58:17 2005  Laurent Monin <zas@norz.org>:
+
+	* src/config/kbdbind.h:
+
+	Update comment: long -> unicode_val_T.  
+
+Thu May 19 02:54:35 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/tools/make-elinkskeys-manpage:
+
+	Clean up and simplify.  
+
+Thu May 19 01:16:57 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/config.pl:
+
+	gotosearch is no longer an option.  It never should have been,
+	either.  
+
+Thu May 19 01:15:16 2005  Russ Rowan <rrowan@dandy.net>:
+
+	* contrib/perl/hooks.pl:
+
+	Disabling the quoted search hack^H^H^H^Hfeature, gotosearch (which
+	*never* worked), and noting why.  
+
+Thu May 19 00:55:18 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/tools/make-elinkskeys-manpage:
+
+	Fix d'script.  
+
+Thu May 19 00:29:40 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/config/: actions-edit.inc, actions-main.inc,
+	actions-menu.inc, kbdbind.c, kbdbind.h:
+
+	ACTION_INFO -> ACTION_.  
+
+Wed May 18 23:01:09 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/bookmarks.txt:
+
+	Various markup fixes.  
+
+Wed May 18 22:24:46 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* doc/faq.txt:
+
+	Fix reference to history page. Remove useless link and rewrap.  
+
 Wed May 18 20:35:48 2005  Laurent Monin <zas@norz.org>:
 
 	* src/: document/document.h, document/html/parser.c,
