--- a/doc/faq.txt
+++ b/doc/faq.txt
@@ -1,5 +1,6 @@
 Frequently Asked Questions
 --------------------------
+:Description:	FAQ for the ELinks project
 
 This is an attempt to capture some of the questions that appear once in a
 while on the mailing list.
@@ -150,4 +151,4 @@ fields can be added inside the parenthesis in the next versions.  Note that
 users can change their User-Agent through the options system.
 
 
-$Id: faq.txt,v 1.3 2005/05/18 22:24:46 jonas Exp $
+$Id: faq.txt,v 1.4 2005/05/21 20:46:23 jonas Exp $
