--- a/doc/hacking.txt
+++ b/doc/hacking.txt
@@ -1,3 +1,6 @@
+Hacking ELinks
+--------------
+
 Welcome, mere mortal, to the realm of evil unindented code, heaps of one or
 two-letter variables, seas of gotos accompanied with 30-letters labels in Czech
 language with absolutely no meaning, welcome to the realm of ELinks code!
@@ -128,57 +131,58 @@ in some cruft.
 
 For example, the code implementing the Go To URL dialog box hook :
 
-  void goto_url_with_hook(struct session *ses, unsigned char *url)
-  {
-  #ifndef HAVE_LUA
-          goto_url(ses, url);
-  #else
-          lua_State *L = lua_state;
-          int err;
+------------------------------------------------------------------------------
+void goto_url_with_hook(struct session *ses, unsigned char *url)
+{
+#ifndef HAVE_LUA
+	goto_url(ses, url);
+#else
+	lua_State *L = lua_state;
+	int err;
 
-[1]       lua_getglobal(L, "goto_url_hook");
-          if (lua_isnil(L, -1)) {
-                  lua_pop(L, 1);
-                  goto_url(ses, url);
-                  return;
-          }
-
-[2]       lua_pushstring(L, url);
-          if (list_empty(ses->history)) lua_pushnil(L);
-          else lua_pushstring(L, cur_loc(ses)->vs.url);
-
-[3]       if (prepare_lua(ses)) return;
-[4]       err = lua_call(L, 2, 1);
-[5]       finish_lua();
-          if (err) return;
-
-[6]       if (lua_isstring(L, -1))
+	lua_getglobal(L, "goto_url_hook");				   <1>
+	if (lua_isnil(L, -1)) {
+		lua_pop(L, 1);
+		goto_url(ses, url);
+		return;
+	}	 
+	lua_pushstring(L, url);						   <2>
+	if (list_empty(ses->history)) lua_pushnil(L);
+	else lua_pushstring(L, cur_loc(ses)->vs.url);
+	 
+	if (prepare_lua(ses)) return;					   <3>
+	err = lua_call(L, 2, 1);					   <4>
+	finish_lua();							   <5>
+	if (err) return;
+	 
+	if (lua_isstring(L, -1))					   <6>
 		goto_url(ses, (unsigned char *) lua_tostring(L, -1));
-          else if (!lua_isnil(L, -1))
+	else if (!lua_isnil(L, -1))
 		alert_lua_error("goto_url_hook must return a string or nil");
-          lua_pop(L, 1);
-  #endif
-  }
+	lua_pop(L, 1);
+#endif
+}
+------------------------------------------------------------------------------
 
 Quick description of what it does:
 
-[1] Get the value named `goto_url_hook' from the Lua state.  If it doesn't
+<1> Get the value named `goto_url_hook' from the Lua state.  If it doesn't
     exist, the user hasn't installed a hook so continue the normal way.
 
-[2] Push the arguments onto the Lua stack for the function call.
+<2> Push the arguments onto the Lua stack for the function call.
     `goto_url_hook' takes two parameters, the new URL and the current URL, so
     we push them on.
 
-[3] Some stuff to prepare for running Lua.  This is in case, for example, the
+<3> Some stuff to prepare for running Lua.  This is in case, for example, the
     Lua function contains bugs, we want to trap some of that.  It's supposed to
     enable a mechanism where ^C will break out of infinite loops and such, but
     that's not working so good.
 
-[4] Call the Lua function, i.e. goto_url_hook
+<4> Call the Lua function, i.e. goto_url_hook
 
-[5] Disable the error trapping stuff.
+<5> Disable the error trapping stuff.
 
-[6] Look at the return value of goto_url_hook and do something appropriate.
+<6> Look at the return value of goto_url_hook and do something appropriate.
 
 [ If you want to know the lua_* functions, you're going to have to read the
   Lua API manual ]
@@ -223,13 +227,16 @@ Please _USE_ one tab instead of 8 spaces!  It makes things easier.
 Always place spaces around '=', after ',' and - if reasonable - around other
 operators as well.  You shouldn't make assignments in conditionals:
 
-	Use:
-		foo = mem_alloc(1234);
-		if (!foo) panic("out of memory");
+.Use:
+------------------------------------------------------------------------------
+foo = mem_alloc(1234);
+if (!foo) panic("out of memory");
+------------------------------------------------------------------------------
 
-	Instead of:
-
-		if (!(foo = mem_alloc(1234))) panic("out of memory");
+.Instead of:
+------------------------------------------------------------------------------
+if (!(foo = mem_alloc(1234))) panic("out of memory");
+------------------------------------------------------------------------------
 
 Note that thou shalt ALWAYS test for success on everything - we are supposed
 to die with honor if we are to die!
@@ -245,53 +252,66 @@ at the start of block only.
 3.1, Comments
 ~~~~~~~~~~~~~
 
-Use blank lines frequently to separate chunks of code.  And use magic "/*" and
-"*/" to give others an idea about what it does and about possible pitfalls.
+Use blank lines frequently to separate chunks of code.  And use magic `/\*` and
+`*/` to give others an idea about what it does and about possible pitfalls.
 (Do not use //, as that is not a feature of ANSI C a.k.a. C89.)
 
 Keep in mind that if there's an object and verb in the comment (and it is, in
 most cases), it is a sentence, so it has to start with a capital letter and end
 with a fullstop ;-).  If you want to share your opinion or investigations, you
-should sign yourself; e.g., /* TODO: Move this far away! --pasky */
+should sign yourself; e.g.,
+
+	/* TODO: Move this far away! --pasky */
 
 Comments should be written in _ENGLISH_ only.
 
 All three following styles of comments are acceptable:
 
-	/*
-	 * Bla bla bla.
-	 * blabla?
-	 */
+------------------------------------------------------------------------------
+/*
+ * Bla bla bla.
+ * blabla?
+ */
 
-	/* Bla bla bla.
-	 * blabla?
-	 */
+/* Bla bla bla.
+ * blabla?
+ */
 
-	/* Bla bla bla.
-	 * blabla? */
+/* Bla bla bla.
+ * blabla? */
+------------------------------------------------------------------------------
 
 The best one usually depends on the actual context.
 
 If you describe a structure, make either:
 
-        char *name; /* name of the tag */
-        void (*func)(unsigned char *); /* function hopefully handling the
-                                        * content of the tag */
-        int linebreak; /* needed for break of a line? */
+------------------------------------------------------------------------------
+char *name; /* name of the tag */
+void (*func)(unsigned char *); /* function hopefully handling the
+                                * content of the tag */
+int linebreak; /* needed for break of a line? */
+------------------------------------------------------------------------------
 
 or
 
-        /* Name of the tag */
-        char *name;
-        /* Function hopefully handling the content of the tag */
-        void (*func)(unsigned char *);
+------------------------------------------------------------------------------
+/* Name of the tag */
+char *name;
+/* Function hopefully handling the content of the tag */
+void (*func)(unsigned char *);
 
-        /* Do we need to break a line? */
-        int linebreak;
+/* Do we need to break a line? */
+int linebreak;
+------------------------------------------------------------------------------
 
-Same if you comment the code.  If the comment is /* then do it now! */,
+Same if you comment the code.  If the comment is
+
+	/* then do it now! */
+
 place it on the same line as the command, if it's
-/* We have to parse this crap now, as it is going to be freed in free_crap() */
+
+	/* We have to parse this crap now, as it is going to be freed in free_crap() */
+
 place it on the preceding line.
 
 
@@ -302,8 +322,10 @@ Note: We use short variables names and stupid examples here, do not take that
       as a guideline for _REAL_ coding.  Always use descriptive variables
       names and do not write stupid code ;).
 
-* General style is:
+General style is:
+^^^^^^^^^^^^^^^^^
 
+------------------------------------------------------------------------------
 [blank line]
 /* This is a comment about that function */
 int
@@ -324,234 +346,291 @@ func(int a, int b)
 
 	return (c * d);
 }
+------------------------------------------------------------------------------
 
-* You should observe the following rules:
+You should observe the following rules:
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-- Always have a blank line before a function declaration or comment.
+Always have a blank line before a function declaration or comment.
 
-- Please add a comment about what the function does.
+Please add a comment about what the function does.
 
-- A function's type must be on first line while the function's name is on
-  the second line.
+A function's type must be on first line while the function's name is on the
+second line.
 
-- If the parameters list exceeds 80 columns then wrap them after a comma to
-  the next line and align them using tabs and/or spaces with the first
-  parameter.
+If the parameters list exceeds 80 columns then wrap them after a comma to
+the next line and align them using tabs and/or spaces with the first
+parameter.
+  
+.Use:
+------------------------------------------------------------------------------
+int
+func(int p1, int p2, int p3,
+     struct very_long_name_for_a_structure *s,
+     unsigned long last_parameter)
+{
+	int v;
 
-	Use:
+	...
+}
+------------------------------------------------------------------------------
 
-		int
-		func(int p1, int p2, int p3,
-		     struct very_long_name_for_a_structure *s,
-		     unsigned long last_parameter)
-		{
-			int v;
+The start of a function's body should be alone on the first column.
 
-			...
-		}
+Always have a blank line after declarations.
 
-- The start of a function's body should be alone on the first column.
+Always have spaces around operators.
 
-- Always have a blank line after declarations.
+.Use:
+------------------------------------------------------------------------------
+c = a * b - (a + b);
+------------------------------------------------------------------------------
 
-- Always have spaces around operators.
-
-	Use:
-		c = a * b - (a + b);
-
-	Instead of:
-		c=a*b-(a+b);
+.Instead of:
+------------------------------------------------------------------------------
+c=a*b-(a+b);
+------------------------------------------------------------------------------
 
 - Keep affectation outside of conditional tests.
 
-	Use:
-		c = a;
-		if (c == b) {...
+.Use:
+------------------------------------------------------------------------------
+c = a;
+if (c == b) {...
+------------------------------------------------------------------------------
 
-	Instead of:
-		if ((c = a) == b) {...
+.Instead of:
+------------------------------------------------------------------------------
+if ((c = a) == b) {...
+------------------------------------------------------------------------------
 
-- Never use spaces within ().
+Never use spaces within ().
 
-	Use:
-		if (a) ...
+.Use:
+------------------------------------------------------------------------------
+if (a) ...
+------------------------------------------------------------------------------
 
-	Instead of:
-		if ( a ) ...
+.Instead of:
+------------------------------------------------------------------------------
+if ( a ) ...
+------------------------------------------------------------------------------
 
-- Indent.
+Indent.
 
-	Use:
-		foreach (a, b)
-			if (a == c)
-				...
-			else
-				...
-	Instead of:
-		foreach(a, b) if (a == c) ...  else ...
+.Use:
+------------------------------------------------------------------------------
+foreach (a, b)
+	if (a == c)
+		...
+	else
+		...
+------------------------------------------------------------------------------
 
-- If you have a chain of if () { .. } else if () { .. } else { .. } with
-  longer statements, you can insert a blank line before each else line.
+.Instead of:
+------------------------------------------------------------------------------
+foreach(a, b) if (a == c) ...  else ...
+------------------------------------------------------------------------------
 
-- Label names should start on the first column and with have a blank line
-  before it.
+If you have a chain of if () { .. } else if () { .. } else { .. } with longer
+statements, you can insert a blank line before each else line.
 
-	Use:
-			some_code(aaa);
+Label names should start on the first column and with have a blank line before
+it.
 
-		label:
-			some_other_code(bbb);
+.Use:
+-------------------------------------------------------------------------------
+	some_code(aaa);
 
-	Instead of:
-			some_code(aaa);
-			label:
-			some_other_code(bbb);
+label:
+	some_other_code(bbb);
+-------------------------------------------------------------------------------
+.Instead of:
+-------------------------------------------------------------------------------
+	some_code(aaa);
+	label:
+	some_other_code(bbb);
+-------------------------------------------------------------------------------
 
-- Wrap conditions on spaces before operators like && or ||.
+Wrap conditions on spaces before operators like && or ||.
 
-	Use:
-		if (some_very_long_thing1 == some_very_long_thing2
-		    && (test1 == test2
-			|| some_very_long_thing3 == some_very_long_thing4)) {
-			....
-		}
+.Use:
+-------------------------------------------------------------------------------
+if (some_very_long_thing1 == some_very_long_thing2
+    && (test1 == test2
+	|| some_very_long_thing3 == some_very_long_thing4)) {
+	....
+}
+-------------------------------------------------------------------------------
 
-- Please remove useless spaces or tabs at the end of lines.  Vim has a syntax
-  file called "Whitespace (add)" ...
+Please remove useless spaces or tabs at the end of lines.  Vim has a syntax
+file called "Whitespace (add)" ...
 
-- Please keep includes in alphabetical order unless a specific order is
-  required for compilation on weird systems (then please at least make a proper
-  comment about that).
+Please keep includes in alphabetical order unless a specific order is required
+for compilation on weird systems (then please at least make a proper comment
+about that).
 
-- Please declare functions without parameters as taking void parameter:
+Please declare functions without parameters as taking void parameter:
 
-	Use:
-		int
-		func(void)
-		{
-			some_code();
-		}
+.Use:
+-------------------------------------------------------------------------------
+int
+func(void)
+{
+	some_code();
+}
+-------------------------------------------------------------------------------
 
-	Instead of:
-		int
-		func()
-		{
-			some_code();
-		}
+.Instead of:
+-------------------------------------------------------------------------------
+int
+func()
+{
+	some_code();
+}
+-------------------------------------------------------------------------------
 
-- Please write if (), while (), switch (), for (), .... instead of if(), while(),
-  switch(), for()...
-  Same thing apply for all iterators and tests (e.g. foreach, foreachback).
+Please write if (), while (), switch (), for (), .... instead of if(),
+while(), switch(), for()...  Same thing apply for all iterators and tests
+(e.g. foreach, foreachback).
 
-- Please write sizeof(something) instead of sizeof something.
+Please write sizeof(something) instead of sizeof something.
 
-- Use assert() and assertm() where applicable. It will prevent hidden bugs.
+Use assert() and assertm() where applicable. It will prevent hidden bugs.
 
-- If you see code in ELinks that doesn't follow these rules, fix it or tell
-  us about it.
+If you see code in ELinks that doesn't follow these rules, fix it or tell us
+about it.
 
-- All the .c files MUST start by a short one-line description and a CVS Id tag
-  on the next line:
+All the .c files MUST start by a short one-line description and a CVS Id tag
+on the next line:
 
 	/* <short one-line description> */
-	/* $Id: hacking.txt,v 1.33 2005/04/15 17:48:41 jonas Exp $ */
+	/* $Id: hacking.txt,v 1.34 2005/05/21 20:47:19 jonas Exp $ */
 
-- All the .h files MUST start by a CVS Id tag and then anti-reinclusion ifdef.
-  The macro is EL__<path_relative_to_src:s/[\/.]/_/>.
+All the .h files MUST start by a CVS Id tag and then anti-reinclusion ifdef.
+The macro is
 
-- There are obviously exceptions to these rules, but don't make a rule from
-  your exception and be prepared to defend your exception at anytime ;).
+	EL_<path_relative_to_src:s/[\/.]/_/>.
+
+There are obviously exceptions to these rules, but don't make a rule from your
+exception and be prepared to defend your exception at anytime ;).
 
 
 3.3, Coding practices
 ~~~~~~~~~~~~~~~~~~~~~
 
-- If speed is not critical and especially if you are messing with some struct
-  where size might matter, feel encouraged to use bitfields to store boolean
-  (or tristate or tetrastate ;) values (e.g. unsigned int foo:1 for one-bit
-  field). HOWEVER please ALWAYS specify signedness of all such fields. It is
-  very easy to reach the top bit in these cases, and with int foo:1, foo would
-  be either 0 or -1, which is probably not what you want.
+Use bitfields to store boolean values
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-- Wrap hard initializations of structures with macros, if the structure's
-  initializers are going to be spread widely (so that we can grep for them
-  easily), there are massive typecasts needed in most of the initializers, you
-  feel that order of the fields in structure is unstable yet and it is likely
-  to change (and you don't want to change the initializers everytime you do
-  so), or in similar cases.
+If speed is not critical and especially if you are messing with some struct
+where size might matter, feel encouraged to use bitfields to store boolean (or
+tristate or tetrastate ;) values (e.g. unsigned int foo:1 for one-bit field).
+HOWEVER please ALWAYS specify signedness of all such fields. It is very easy
+to reach the top bit in these cases, and with int foo:1, foo would be either 0
+or -1, which is probably not what you want.
 
-  You can do it like:
+Wrap hard initializations of structures with macros
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-  struct example {
+This should be done if the structure's initializers are going to be spread
+widely (so that we can grep for them easily), there are massive typecasts
+needed in most of the initializers, you feel that order of the fields in
+structure is unstable yet and it is likely to change (and you don't want to
+change the initializers everytime you do so), or in similar cases.
+
+.You can do it like:
+-------------------------------------------------------------------------------
+struct example {
 	int a;
 	int b;
 	char *c;
-  };
-  #define INIT_EXAMPLE(a, b, c) {a, b, c}
-  #define NULL_EXAMPLE {0, 0, NULL}
+};
+#define INIT_EXAMPLE(a, b, c) {a, b, c}
+#define NULL_EXAMPLE {0, 0, NULL}
 
-  struct example t[] = {
+struct example t[] = {
 	INIT_EXAMPLE(1, 2, "abc"),
 	INIT_EXAMPLE(3, 4, "def"),
 	NULL_EXAMPLE
-  };
+};
 
-  struct example t = NULL_EXAMPLE;
+struct example t = NULL_EXAMPLE;
+-------------------------------------------------------------------------------
 
-- Please try to keep order of fields from max. to min. of size of each type of
-  fields, especially in structures:
+Please try to keep order of fields
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-	Use:
-		long a;
-		int b;
-		char c;
+Please try to keep order of fields from max. to min. of size of each type of
+fields, especially in structures:
 
-	Instead of:
-	 	char c;
-	 	int b;
-	 	long b;
+.Use:
+-------------------------------------------------------------------------------
+long a;
+int b;
+char c;
+-------------------------------------------------------------------------------
 
-  It will help to reduce memory padding on some architectures. Note that this
-  applies only if this will not affect logical division of the structure. The
-  logical composition always takes precedence over this optimization, modulo
-  some very rare critical structures.
+.Instead of:
+-------------------------------------------------------------------------------
+char c;
+int b;
+long b;
+-------------------------------------------------------------------------------
 
-- Please do not use sizeof(struct item_struct_name) but instead sizeof(*item)
-  when possible:
+It will help to reduce memory padding on some architectures. Note that this
+applies only if this will not affect logical division of the structure. The
+logical composition always takes precedence over this optimization, modulo
+some very rare critical structures.
 
-  struct example {
-	  int *integers;
-	  void **pointers;
-  }
+Please do not use sizeof(struct item_struct_name)
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-  struct example *item;
+Instead use sizeof(*item) when possible.
 
-	Use:
-		item = mem_alloc(sizeof(*item));
-		memset(item, 0, sizeof(*item));
-		item->integers = mem_calloc(10, sizeof(*item->integers));
-		item->pointers = mem_calloc(10, sizeof(*item->pointers));
+-------------------------------------------------------------------------------
+struct example {
+	int *integers;
+	void **pointers;
+}
 
-	Instead of:
-		item = mem_alloc(sizeof(struct example));
-		memset(item, 0, sizeof(struct example));
-		item->integers = mem_calloc(10, sizeof(int));
-		item->pointers = mem_calloc(10, sizeof(void *));
+struct example *item;
+-------------------------------------------------------------------------------
 
-  The preferred form eases future changes in types, and maintain size vs type
-  coherence.
+.Use:
+-------------------------------------------------------------------------------
+item = mem_alloc(sizeof(*item));
+memset(item, 0, sizeof(*item));
+item->integers = mem_calloc(10, sizeof(*item->integers));
+item->pointers = mem_calloc(10, sizeof(*item->pointers));
+-------------------------------------------------------------------------------
 
-- Please postfix defined types with _T:
+.Instead of:
+-------------------------------------------------------------------------------
+item = mem_alloc(sizeof(struct example));
+memset(item, 0, sizeof(struct example));
+item->integers = mem_calloc(10, sizeof(int));
+item->pointers = mem_calloc(10, sizeof(void *));
+-------------------------------------------------------------------------------
 
-	typedef int (some_func_T)(void *);
-	typedef long long our_long_T;
+The preferred form eases future changes in types, and maintain size vs type
+coherence.
+
+Please postfix defined types with _T
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+-------------------------------------------------------------------------------
+typedef int (some_func_T)(void *);
+typedef long long our_long_T;
+-------------------------------------------------------------------------------
 
 
 4, Patches
 ~~~~~~~~~~
 
-Please send unified patches only.  The recommended way is:
+Please send unified patches only.
 
+.The recommended way is:
+-------------------------------------------------------------------------------
 cp -a elinks/ elinks+mysuperfeature/
 cd elinks+mysuperfeature/
 *clap clap*
@@ -561,11 +640,12 @@ make
 *goto clap*
 cd ..
 diff -ru elinks/ elinks+mysuperfeature/ >elinks-mysuperfeature.patch
+-------------------------------------------------------------------------------
 
 Please manually remove any bloat like changes in ./configure, whitespace
 changes etc. ;-).
 
-We also accept output from "cvs diff -u" :).  The statement about bloat
+We also accept output from `cvs diff -u` :).  The statement about bloat
 removing above still applies.
 
 Big patches are hard to review so if your feature involves a lot of changes
@@ -581,16 +661,15 @@ breaking it to the "thinnest" possible level where the change is still
 sufficiently self-contained.
 
 
-5, Advantages of --enable-debug configure option and why everybody concerned
-with ELinks devel. should use it:
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+5, Advantages of `--enable-debug` configure option
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Since ELinks 0.4pre11, a memory debugger can be enabled using the
---enable-debug configure script option.  It may help to find memleaks and
-more...
+`--enable-debug` configure script option.  It may help to find memleaks and more
+which is why everybody concerned with ELinks develepment should use it:
 
-In 0.5 versions --enable-debug add some fancy things:
-- many data integrity checking (see lists.h)
+In 0.5 versions `--enable-debug` add some fancy things:
+- many data integrity checking (see `lists.h`)
 - hotkey debugging: especially cool for translators, it highlights redundant
   hotkeys in a menu.
 - more errors messages
@@ -599,11 +678,11 @@ In 0.5 versions --enable-debug add some fancy things:
 - internal backtrace feature (always enabled if possible)
 - and more...
 
-Before sending a patch, always try to compile and test it with --enable-debug,
-then in normal mode, then in --fast-mem mode. If it fails to compile or
-execute in one of these modes, then rework it.
+Before sending a patch, always try to compile and test it with
+`--enable-debug`, then in normal mode, then in `--fast-mem` mode. If it fails
+to compile or execute in one of these modes, then rework it.
 
 
 Happy hacking!
 
-$Id: hacking.txt,v 1.33 2005/04/15 17:48:41 jonas Exp $
+$Id: hacking.txt,v 1.34 2005/05/21 20:47:19 jonas Exp $
